@@ -1,3 +1,11 @@
+2007-06-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-spu.c (spu_cons): Use deferred_expression.  Handle
+	number@ppu.
+	(tc_gen_reloc): Abort if neither addsy or subsy is set.
+	(md_apply_fix): Don't attempt to resolve SPU_PPU relocs.
+	* config/tc-spu.h (md_operand): Handle @ppu without sym.
+
 2007-05-31  Paul Brook  <paul@codesourcery.com>
 
 	* config/tc-arm.c (insns): Allow strex on M profile cores.
